test/visibility/import/deeperNesting2.good
deeperNesting2.chpl:12: warning: currently unable to import nested modules without specifying the full path to the module
deeperNesting2.chpl:2: note: skipping module defined here
deeperNesting2.chpl:12: error: No better match found
